WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61654
[chromium] Fix crash from empty reflections with masks
https://bugs.webkit.org/show_bug.cgi?id=61654
Summary
[chromium] Fix crash from empty reflections with masks
Adrienne Walker
Reported
2011-05-27 11:51:58 PDT
[chromium] Fix crash from empty reflections with masks
Attachments
Patch
(8.79 KB, patch)
2011-05-27 11:54 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
Patch
(8.04 KB, patch)
2011-05-27 13:18 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-05-27 11:54:17 PDT
Created
attachment 95202
[details]
Patch
James Robinson
Comment 2
2011-05-27 12:41:48 PDT
Comment on
attachment 95202
[details]
Patch Test should be dumpAsText(), the render tree + pixel output are useless. Add some text indicating something like 'test passes if it does not crash' so it's clearer what the test is trying to verify. Can the box-reflect be simplified at all to just show the part needed to hit the crash?
Adrienne Walker
Comment 3
2011-05-27 12:52:47 PDT
(In reply to
comment #2
)
> (From update of
attachment 95202
[details]
) > Test should be dumpAsText(), the render tree + pixel output are useless. Add some text indicating something like 'test passes if it does not crash' so it's clearer what the test is trying to verify.
Ok. We had no tests with empty reflections, so I figured it might make sense to see that what was rendered was expected. It's not that important--I can make it dumpAsText.
> Can the box-reflect be simplified at all to just show the part needed to hit the crash?
I'll see what I can do.
Adrienne Walker
Comment 4
2011-05-27 13:18:08 PDT
Created
attachment 95208
[details]
Patch
James Robinson
Comment 5
2011-05-31 13:35:47 PDT
Comment on
attachment 95208
[details]
Patch r=me
Adrienne Walker
Comment 6
2011-05-31 16:49:32 PDT
Committed
r87762
: <
http://trac.webkit.org/changeset/87762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug