2011-05-27  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] Fix crash from empty reflections with masks
        https://bugs.webkit.org/show_bug.cgi?id=61654

        * compositing/reflections/empty-reflection-with-mask-expected.txt: Added.
        * compositing/reflections/empty-reflection-with-mask.html: Added.
2011-05-27  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        [chromium] Fix crash from empty reflections with masks
        https://bugs.webkit.org/show_bug.cgi?id=61654

        Change the iteration for updateCompositorResources to match that being
        done in the paint and draw steps.  This mismatch of iteration style
        was causing layers with replica masks to correctly get skipped while
        painting but not get skipped during texture upload.

        Test: compositing/reflections/empty-reflection-with-mask.html

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::updateLayers):
        (WebCore::LayerRendererChromium::updateCompositorResources):
        * platform/graphics/chromium/LayerRendererChromium.h:

Canonical link: https://commits.webkit.org/77240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87762 268f45cc-cd09-0410-ab3c-d52691b4dbfc